--- a/Notebooks/Week03/Week03_NB4_Interpretability.ipynb
+++ b/Notebooks/Week03/Week03_NB4_Interpretability.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install lime"
+    "# !pip install lime"
    ]
   },
   {
@@ -346,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install shap"
+    "# !pip install shap"
    ]
   },
   {
